--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -74,24 +74,21 @@ table {
     border-spacing: 0;
 }
 
-/*
-    Now here is when interesting things start to appear.
 
-    We set up <body> styles with default font and nice gradient in the background.
-    And yes, there is a lot of repetition there because of -prefixes but we don't
-    want to leave anybody behind.
-*/
+
 body {
     font-family: 'PT Sans', sans-serif;
     min-height: 740px;
 
-    background: rgb(215, 215, 215);
+    background-image: url(http://pixel.bnetwork.netdna-cdn.com/wp-content/uploads/2012/04/Vector-tree-7.jpg);
+    background-size: cover;
+    /*background: rgb(215, 215, 215);
     background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
     background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
 }
 
 /*
@@ -210,7 +207,7 @@ a:focus {
     display: block;
 
     width: 900px;
-    height: 700px;
+    /*height: 700px;*/
     padding: 40px 60px;
 
     background-color: white;
