--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -203,6 +203,23 @@ a:focus {
 
     They cover everything what you see on first three steps of the demo.
 */
+
+.markup {
+    display: inline;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 30px;
+    line-height: 36px;
+    letter-spacing: -1px;
+}
+
 .slide {
     display: block;
 
